css/style.css
body, html {
	height: 100%;
	margin: 0;
	font-size: 16px;
	font-family: "Lato", sans-serif;
	font-weight: 400;
	line-height: 1.8em;
	color: #666;
}

.pimg1, .pimg2, .pimg3 {
	position: relative;
	opacity: 0.70;
	background-position: center;
	background-size: cover;
	background-repeat: no-repeat;
	background-attachment: fixed;
}

.pimg1 {
	background-image: url("../img/city1.jpeg");
	min-height: 100%;
}

.pimg2 {
	background-image: url("../img/city2.jpeg");
	min-height: 400px;
}

.pimg3 {
	background-image: url("../img/city3.jpeg");
	min-height: 400px;
}

.section {
	text-align: center;
	padding: 50px 80px;
}

.section-light { 
	background-color: #f4f4f4;
	color:#666;
}

.section-dark {
	background-color: #2e2e34;
	color: #ddd;
}

.ptext {
	position: absolute;
	top: 50%;
	width: 100%;
	text-align: center;
	color: #000;
	font-size: 27px;
	letter-spacing: 8px;
	text-transform: uppercase;
}

.ptext .border {
	background-color: #111;
	color:#fff;
	padding: 20px;
}

.ptext .border .trans {
	background-color: transparent;
}

